--- a/dist.ini
+++ b/dist.ini
@@ -26,10 +26,12 @@ Catalyst::Action::RenderView = 0
 Catalyst::View::TT = 0
 Catalyst::TraitFor::Model::DBIC::Schema::QueryLog::AdoptPlack = 0
 Catalyst::Plugin::Session = 0
-Catalyst::Plugin::Session::Store::Memcached = 0
 Catalyst::Plugin::Session::Store::TestMemcached = 0
 Catalyst::Plugin::Session::State::Cookie = 0
 Catalyst::Plugin::EnableMiddleware = 0
+Catalyst::Plugin::Authentication = 0
+Catalyst::Authentication::Store::DBIx::Class = 0
+Catalyst::Model::Adaptor = 0
 Plack = 0
 Plack::Middleware::Debug = 0
 Plack::Middleware::Debug::DBIC::QueryLog = 0
@@ -37,7 +39,6 @@ CatalystX::Syntax::Action = 0
 parent = 0
 Digest = 0
 DateTime = 0
-Test::Memcached = 0
 
 [Prereqs / TestRequires]
 Test::Most = 0
