--- a/dist.ini
+++ b/dist.ini
@@ -36,6 +36,7 @@ Plack = 0
 Plack::Middleware::Debug = 0
 Plack::Middleware::Debug::DBIC::QueryLog = 0
 CatalystX::Syntax::Action = 0
+HTML::FormHandler = 0
 parent = 0
 Digest = 0
 DateTime = 0
