--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,7 @@ Plack::Middleware::Debug = 0
 Plack::Middleware::Debug::DBIC::QueryLog = 0
 CatalystX::Syntax::Action = 0
 HTML::FormHandler = 0
+HTML::Zoom = 0
 parent = 0
 Digest = 0
 DateTime = 0
