--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ Syntax::Feature::Simple = 0
 Modern::Perl = 0
 Catalyst = 0
 Catalyst::Devel = 0
+Catalyst::Controller::REST = 0 
 Catalyst::Plugin::ConfigLoader = 0
 Catalyst::Plugin::URLMap = 0
 Catalyst::Model::DBIC::Schema = 0
